samples/_failures_safe/1761494139_50ee6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f9aa75d.c: In function ‘main’:
./samples/SAFE/__tmp_4f9aa75d.c:148:13: error: expected declaration or statement at end of input
  148 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_4f9aa75d.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f9aa75d.c:148:13: error: expected declaration or statement at end of input
